# Tender-AI

./: .editorconfig  .env.example  .gitignore  APACHE2_SETUP.md  API_DOCUMENTATION.md  CI-CD-SUMMARY.md  CONTENT_HASH_FIX.md  DEPLOYMENT.md  DOCKER_SETUP.md  DOCKER_VOLUMES.md  Makefile  NGINX_MIGRATION.md  QUICK-START.txt  README.md  SOURCES_CONFIG.md  SSL_SETUP.md  alembic.ini  docker-compose.override.dev.yml  docker-compose.override.prod.yml  docker-compose.yml  pyproject.toml  ruff.toml  settings.yaml  technical_specifications.md
.github/workflows/: INFO.md  README.md  ci-cd.yml
alembic/: env.py
docs/: DEDUPLICATION_FIX.md  NODE_LOGGING.md  OLLAMA_SETUP.md
infra/: Dockerfile.api  Dockerfile.ui  Dockerfile.worker
infra/apache2/: tender-ai.yulcom.net.conf
infra/nginx/: nginx.conf
scripts/: deploy.sh  diagnose.sh  update-apache2.sh
src/: analyze_with_docling.py  download_docling_models.py  test_docling.py  test_docling_v2.py
src/tenderai_bf/: __init__.py  cli.py  config.py  config.py.bak  db.py  logging.py  models.py  schemas.py
src/tenderai_bf/agents/: __init__.py  extraction.py  graph.py
src/tenderai_bf/agents/nodes/: __init__.py  classify.py  compose_report.py  deduplicate.py  email_report.py  extract_item_links.py  fetch_items.py  fetch_joffres.py  fetch_listings.py  fetch_quotidien.py  load_sources.py  parse_extract.py  parse_pdf_rag.py  parse_quotidien_docling.py  summarize.py  vector_store.py
src/tenderai_bf/api/: __init__.py  dependencies.py  main.py
src/tenderai_bf/api/routers/: __init__.py  admin.py  health.py  reports.py  runs.py  sources.py
src/tenderai_bf/email/: __init__.py  smtp_client.py
src/tenderai_bf/report/: __init__.py  docx_report.py
src/tenderai_bf/scheduler/: __init__.py  schedule.py
src/tenderai_bf/storage/: __init__.py  minio_client.py
src/tenderai_bf/ui/: __init__.py  app.py
src/tenderai_bf/utils/: __init__.py  dates.py  docling_parser.py  llm_utils.py  node_logger.py  pdf.py  robots.py
tests/: __init__.py  conftest.py  test_integration.py  test_ollama.py  test_smoke.py  test_utils.py
tests/nodes/: QUICKSTART.md  README.md  run_all_tests.py  test_classify.py  test_deduplicate.py  test_extraction.py  test_pdf_rag.py  test_summarize.py
